chore: remove static on City + start improve City object (with helper of) + fix de bug que je découvre sur le tas MDR